mise en place réseau de neurones

--- a/ClassificationBinaire.ipynb
+++ b/ClassificationBinaire.ipynb
@@ -16,18 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "1f895a6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import des librairies, dans le cadre de ce projet on se basera sur tensorflow \n",
+    "# import des librairies\n",
     "import tensorflow\n",
     "import seaborn as sns\n",
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from keras.layers import Dense\n",
+    "from keras.models import Sequential\n",
+    "from keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers import SGD"
    ]
   },
   {
@@ -310,16 +315,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfeadd9",
+   "id": "ca592374",
    "metadata": {},
    "source": [
-    "Maintenant on va chercher à labeliser nos données. Soit \"Ville A : 0\" et \"Ville B : 1\"."
+    "Maintenant on va chercher à labeliser nos données. Soit \"Ville A : 0\" et \"Ville B : 1\".\n",
+    "# Modification du dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb40d296",
+   "id": "e5fbfc90",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a0170a08",
+   "id": "a85b2b7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "12959b4d",
+   "id": "9d4ac430",
    "metadata": {},
    "outputs": [
     {
@@ -482,9 +488,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "857300c4",
+   "metadata": {},
+   "source": [
+    "Dorénavant nous possédons un dataset qui va nous servir de données d'entrainement.\n",
+    "Maintenant on divise les inputs et leurs labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bea2a9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "echantillon_train = np.array(df_filtre[\"Taille\"]) #sample en anglais \n",
+    "echantillon_label = np.array(df_filtre[\"Label\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c249af",
+   "metadata": {},
+   "source": [
+    "Pour simplifier les opérations mathématiques on ne vas pas travailler avec des nombres énormes compris entre [54;272] \n",
+    "Pour ce faire, on va alors normaliser nos données d'entrée, à savoir la taille (Entre 0 et 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "751ebe00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "miseAEchelle = MinMaxScaler(feature_range=(0,1)) # Normaliser - miseAEchelle = scalar en anglais\n",
+    "miseAEchelle_echantillon_train = scalar.fit_transform(echantillon_train.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dc450f3",
+   "metadata": {},
+   "source": [
+    "# PARTIE 2 : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3efd90b",
+   "metadata": {},
+   "source": [
+    "# Mise en place du réseau de neurone (ANN = Artificial neural network)\n",
+    "Le Machine Learning est une science expérimentale, en d'autres termes, pour trouver le bon modèle il faut faire des tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "194a8382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# couches de notre réseau de neurones avec les fonctions d'activations et le nb de neurones que l'on détermine \n",
+    "model = Sequential([Dense(12,input_dim = 1, activation = 'relu'),\n",
+    "                    Dense(12, activation = 'relu'),\n",
+    "                    Dense(12, activation = 'relu'),\n",
+    "                    Dense(4, activation = 'softmax'),\n",
+    "                   ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d83f86d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fonction de coût que l'on détermine => Adam/SGD avec le learning rate soit le pas d'apprentissage dans l'obj de minimiser \n",
+    "# le plus vite la fonction ... le pas est aussi à définir par nos soins, tjrs dans le but de tester pour trouver ce qu'il y a\n",
+    "# de mieux\n",
+    "model.compile(optimizer=SGD(learning_rate=0.0001), loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ed9fc8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1494 - accuracy: 0.9890\n",
+      "Epoch 2/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1485 - accuracy: 0.9895\n",
+      "Epoch 3/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1479 - accuracy: 0.9891\n",
+      "Epoch 4/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1474 - accuracy: 0.9893\n",
+      "Epoch 5/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1468 - accuracy: 0.9902\n",
+      "Epoch 6/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1463 - accuracy: 0.9896\n",
+      "Epoch 7/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1457 - accuracy: 0.9894\n",
+      "Epoch 8/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1452 - accuracy: 0.9897\n",
+      "Epoch 9/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1447 - accuracy: 0.9896\n",
+      "Epoch 10/10\n",
+      "2000/2000 [==============================] - 3s 1ms/step - loss: 0.1442 - accuracy: 0.9892\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1dd09581dc0>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# nb d'itérations = epochs / batch_size = nb de paquet qu'on file à notre modèle pr apprendre car on lui donne pas toutes les data d'un coup \n",
+    "# + l'on donne des gros paquets + l'apprentissage se fait vite et visce versa \n",
+    "model.fit(echantillon_train, echantillon_label, batch_size =25, epochs = 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09b3d917",
+   "metadata": {},
+   "source": [
+    "On remarque qu'on a 2 métriques : loss(perte) et accuracy (précision). En effet cela est très commun (c'est presque une norme) \n",
+    "d'utiliser au moins 2 métriques parmi celles existantes pour juger les performances d'un modèle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "539a0a97",
+   "id": "cb2d5be6",
    "metadata": {},
    "outputs": [],
    "source": []
