matrice de confusion

--- a/ClassificationBinaire.ipynb
+++ b/ClassificationBinaire.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 86,
    "id": "1f895a6a",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,8 @@
     "from keras.layers import Dense\n",
     "from keras.models import Sequential\n",
     "from keras.optimizers import Adam\n",
-    "from tensorflow.keras.optimizers import SGD"
+    "from tensorflow.keras.optimizers import SGD\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca592374",
+   "id": "1b2686be",
    "metadata": {},
    "source": [
     "Maintenant on va chercher à labeliser nos données. Soit \"Ville A : 0\" et \"Ville B : 1\".\n",
@@ -325,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e5fbfc90",
+   "id": "44351336",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a85b2b7f",
+   "id": "8f1451d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9d4ac430",
+   "id": "fc225a5f",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "857300c4",
+   "id": "4c525315",
    "metadata": {},
    "source": [
     "Dorénavant nous possédons un dataset qui va nous servir de données d'entrainement.\n",
@@ -497,9 +498,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9c696e5",
+   "metadata": {},
+   "source": [
+    "# Données d'entraînements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bea2a9e6",
+   "id": "24666e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c249af",
+   "id": "c9f65c45",
    "metadata": {},
    "source": [
     "Pour simplifier les opérations mathématiques on ne vas pas travailler avec des nombres énormes compris entre [54;272] \n",
@@ -519,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "751ebe00",
+   "id": "f3daa3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc450f3",
+   "id": "505898ca",
    "metadata": {},
    "source": [
     "# PARTIE 2 : "
@@ -537,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3efd90b",
+   "id": "b5634b23",
    "metadata": {},
    "source": [
     "# Mise en place du réseau de neurone (ANN = Artificial neural network)\n",
@@ -547,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "194a8382",
+   "id": "e285721e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d83f86d9",
+   "id": "0a34b547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "ed9fc8c8",
+   "id": "0c3e8806",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b3d917",
+   "id": "95c38deb",
    "metadata": {},
    "source": [
     "On remarque qu'on a 2 métriques : loss(perte) et accuracy (précision). En effet cela est très commun (c'est presque une norme) \n",
@@ -631,11 +640,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d37dbf79",
+   "metadata": {},
+   "source": [
+    "# Données de test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb2d5be6",
+   "execution_count": 85,
+   "id": "a81bd3aa",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "echantillon_test = []\n",
+    "echantillon_label = []\n",
+    "\n",
+    "for i in range(10000) :\n",
+    "    val = random.uniform(54,272)\n",
+    "    echantillon_test.append(val)\n",
+    "    echantillon_label.append(0 if val <= 175 else 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ea7639",
+   "metadata": {},
+   "source": [
+    "# Essais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "e1e57c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400/400 [==============================] - 1s 1ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "echantillon_test_sortie = model.predict(echantillon_test,batch_size=25)\n",
+    "echantillon_test_sortie = echantillon_test_sortie.round()\n",
+    "matConf = confusion_matrix(echantillon_label, echantillon_test_sortie[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d603439c",
+   "metadata": {},
+   "source": [
+    "Avec la matrice de confusion \n",
+    "( VP / FP \n",
+    " : FN / VN )\n",
+    "on peut se rendre compte de la précision de notre modèle "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "9d4f7fea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5586,    0],\n",
+       "       [  28, 4386]], dtype=int64)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matConf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52efff16",
+   "metadata": {},
    "source": []
   }
  ],
